--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Controllers\SpeakerController.cs" />
     <Compile Include="Controllers\SponsorController.cs" />
+    <Compile Include="Controllers\TimelineController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -7481,6 +7482,7 @@
     <Content Include="Views\Activity\Edit.cshtml" />
     <Content Include="Views\Session\Edit.cshtml" />
     <Content Include="Views\Interaction\Index.cshtml" />
+    <Content Include="Views\Timeline\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="API\" />
