--- a/Capstone-Project-EIP/CapstoneProjectAdmin/bin/CapstoneProjectAdmin.dll.config
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/bin/CapstoneProjectAdmin.dll.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IdentityEntities" connectionString="Server=BINHNQSE62065\SQLEXPRESS;Database=Demo;User Id=sa;Password=SE62065" providerName="System.Data.SqlClient" />
-    <add name="SkyUpEntities" connectionString="metadata=res://*/Models.Entities.SkyUpEntities.csdl|res://*/Models.Entities.SkyUpEntities.ssdl|res://*/Models.Entities.SkyUpEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IdentityEntities" connectionString="Server=HuyHDLSE61921\SQLEXPRESS;Database=Demo;User Id=sa;Password=SE62065" providerName="System.Data.SqlClient" />
+    <add name="SkyUpEntities" connectionString="metadata=res://*/Models.Entities.SkyUpEntities.csdl|res://*/Models.Entities.SkyUpEntities.ssdl|res://*/Models.Entities.SkyUpEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HuyHDLSE61921\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=0933879970;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HuyHDLSE61921\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=0933879970;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
