--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -29,7 +29,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -198,7 +198,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\QAController.cs" />
     <Compile Include="API\SessionController.cs" />
+    <Compile Include="API\SpeakerController.cs" />
+    <Compile Include="API\SponsorController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -211,6 +214,7 @@
     <Compile Include="Controllers\InteractionController.cs" />
     <Compile Include="Controllers\LivestreamController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\QAController.cs" />
     <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Controllers\SpeakerController.cs" />
     <Compile Include="Controllers\SponsorController.cs" />
@@ -6835,6 +6839,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CustomCss\admin.css" />
     <Content Include="Content\CustomCss\sponsor.css" />
+    <Content Include="Content\CustomCss\style.default.css" />
     <Content Include="Content\DataTables\DataTables-1.10.18\css\dataTables.bootstrap.css" />
     <Content Include="Content\DataTables\DataTables-1.10.18\css\dataTables.bootstrap.min.css" />
     <Content Include="Content\DataTables\DataTables-1.10.18\css\dataTables.bootstrap4.css" />
@@ -6870,6 +6875,8 @@
     <Content Include="Content\DataTables\datatables.min.js" />
     <Content Include="Content\img\background-wifi-2.png" />
     <Content Include="Content\img\download.png" />
+    <Content Include="Content\SpeakerJs\Speaker.js" />
+    <Content Include="Content\SponsorJs\Sponsor.js" />
     <Content Include="Content\sweetalert-master\.gitignore" />
     <Content Include="Content\sweetalert-master\assets\logotype.png" />
     <Content Include="Content\sweetalert-master\assets\swal.gif" />
@@ -7649,6 +7656,7 @@
     <Content Include="Views\Session\Edit.cshtml" />
     <Content Include="Views\Interaction\Index.cshtml" />
     <Content Include="Views\Timeline\Index.cshtml" />
+    <Content Include="Views\QA\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
