--- a/HmsService/HmsService/HmsService/HmsService.csproj
+++ b/HmsService/HmsService/HmsService/HmsService.csproj
@@ -571,6 +571,15 @@
     <None Include="App.Config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="bin\Debug\HmsService.dll.config" />
+    <None Include="bin\Debug\roslyn\csc.exe.config" />
+    <None Include="bin\Debug\roslyn\csc.rsp" />
+    <None Include="bin\Debug\roslyn\csi.rsp" />
+    <None Include="bin\Debug\roslyn\Microsoft.CSharp.Core.targets" />
+    <None Include="bin\Debug\roslyn\Microsoft.VisualBasic.Core.targets" />
+    <None Include="bin\Debug\roslyn\vbc.exe.config" />
+    <None Include="bin\Debug\roslyn\vbc.rsp" />
+    <None Include="bin\Debug\roslyn\VBCSCompiler.exe.config" />
     <None Include="Content\bootstrap\alerts.less" />
     <None Include="Content\bootstrap\badges.less" />
     <None Include="Content\bootstrap\bootstrap.less" />
@@ -665,6 +674,80 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\Autofac.dll" />
+    <Content Include="bin\Debug\Autofac.Integration.Mvc.dll" />
+    <Content Include="bin\Debug\Autofac.Integration.Mvc.xml" />
+    <Content Include="bin\Debug\Autofac.xml" />
+    <Content Include="bin\Debug\AutoMapper.dll" />
+    <Content Include="bin\Debug\AutoMapper.xml" />
+    <Content Include="bin\Debug\EntityFramework.dll" />
+    <Content Include="bin\Debug\EntityFramework.SqlServer.dll" />
+    <Content Include="bin\Debug\EntityFramework.SqlServer.xml" />
+    <Content Include="bin\Debug\EntityFramework.xml" />
+    <Content Include="bin\Debug\HmsService.dll" />
+    <Content Include="bin\Debug\HmsService.pdb" />
+    <Content Include="bin\Debug\LinqToExcel.dll" />
+    <Content Include="bin\Debug\log4net.dll" />
+    <Content Include="bin\Debug\Microsoft.AspNet.SignalR.Core.dll" />
+    <Content Include="bin\Debug\Microsoft.AspNet.SignalR.Core.xml" />
+    <Content Include="bin\Debug\Microsoft.AspNet.SignalR.SystemWeb.dll" />
+    <Content Include="bin\Debug\Microsoft.AspNet.SignalR.SystemWeb.xml" />
+    <Content Include="bin\Debug\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
+    <Content Include="bin\Debug\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="bin\Debug\Microsoft.Owin.dll" />
+    <Content Include="bin\Debug\Microsoft.Owin.Host.SystemWeb.dll" />
+    <Content Include="bin\Debug\Microsoft.Owin.Host.SystemWeb.xml" />
+    <Content Include="bin\Debug\Microsoft.Owin.Security.dll" />
+    <Content Include="bin\Debug\Microsoft.Owin.Security.xml" />
+    <Content Include="bin\Debug\Microsoft.Owin.xml" />
+    <Content Include="bin\Debug\Microsoft.Web.Helpers.dll" />
+    <Content Include="bin\Debug\Microsoft.Web.Infrastructure.dll" />
+    <Content Include="bin\Debug\Microsoft.WindowsAzure.Storage.dll" />
+    <Content Include="bin\Debug\Microsoft.WindowsAzure.Storage.pdb" />
+    <Content Include="bin\Debug\Microsoft.WindowsAzure.Storage.xml" />
+    <Content Include="bin\Debug\Newtonsoft.Json.dll" />
+    <Content Include="bin\Debug\Owin.dll" />
+    <Content Include="bin\Debug\Remotion.Data.Linq.dll" />
+    <Content Include="bin\Debug\Remotion.dll" />
+    <Content Include="bin\Debug\Remotion.Interfaces.dll" />
+    <Content Include="bin\Debug\roslyn\csc.exe" />
+    <Content Include="bin\Debug\roslyn\csi.exe" />
+    <Content Include="bin\Debug\roslyn\Microsoft.Build.Tasks.CodeAnalysis.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.CodeAnalysis.CSharp.Scripting.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.CodeAnalysis.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.CodeAnalysis.Scripting.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.CodeAnalysis.VisualBasic.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.DiaSymReader.Native.amd64.dll" />
+    <Content Include="bin\Debug\roslyn\Microsoft.DiaSymReader.Native.x86.dll" />
+    <Content Include="bin\Debug\roslyn\System.AppContext.dll" />
+    <Content Include="bin\Debug\roslyn\System.Collections.Immutable.dll" />
+    <Content Include="bin\Debug\roslyn\System.Diagnostics.StackTrace.dll" />
+    <Content Include="bin\Debug\roslyn\System.IO.FileSystem.dll" />
+    <Content Include="bin\Debug\roslyn\System.IO.FileSystem.Primitives.dll" />
+    <Content Include="bin\Debug\roslyn\System.Reflection.Metadata.dll" />
+    <Content Include="bin\Debug\roslyn\vbc.exe" />
+    <Content Include="bin\Debug\roslyn\VBCSCompiler.exe" />
+    <Content Include="bin\Debug\SkyWeb.DatVM.Data.dll" />
+    <Content Include="bin\Debug\SkyWeb.DatVM.Mvc.dll" />
+    <Content Include="bin\Debug\System.Web.Helpers.dll" />
+    <Content Include="bin\Debug\System.Web.Helpers.xml" />
+    <Content Include="bin\Debug\System.Web.Mvc.dll" />
+    <Content Include="bin\Debug\System.Web.Mvc.xml" />
+    <Content Include="bin\Debug\System.Web.Razor.dll" />
+    <Content Include="bin\Debug\System.Web.Razor.xml" />
+    <Content Include="bin\Debug\System.Web.WebPages.Deployment.dll" />
+    <Content Include="bin\Debug\System.Web.WebPages.Deployment.xml" />
+    <Content Include="bin\Debug\System.Web.WebPages.dll" />
+    <Content Include="bin\Debug\System.Web.WebPages.Razor.dll" />
+    <Content Include="bin\Debug\System.Web.WebPages.Razor.xml" />
+    <Content Include="bin\Debug\System.Web.WebPages.xml" />
+    <Content Include="bin\Debug\WebMatrix.Data.dll" />
+    <Content Include="bin\Debug\WebMatrix.Data.xml" />
+    <Content Include="bin\Debug\WebMatrix.WebData.dll" />
+    <Content Include="bin\Debug\WebMatrix.WebData.xml" />
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="docs\Readme.html" />
     <Content Include="Libs\SkyWeb.DatVM.Data.dll" />
