--- a/HmsService/HmsService/HmsService/HmsService.csproj
+++ b/HmsService/HmsService/HmsService/HmsService.csproj
@@ -368,6 +368,7 @@
     <Compile Include="Models\Entities\Services\EventCollectionServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\Services\InteractionService.cs" />
     <Compile Include="Models\Entities\Services\InteractionServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
@@ -397,6 +398,8 @@
     <Compile Include="Models\Entities\Services\VotingOptionServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\Services\VotingOptionService.cs" />
+    <Compile Include="Models\Entities\Services\VotingService.cs" />
     <Compile Include="Models\Entities\Services\VotingServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
@@ -498,6 +501,9 @@
     <Compile Include="Sdk\TimelineApiGen.cs">
       <DependentUpon>Sdk.tt</DependentUpon>
     </Compile>
+    <Compile Include="Sdk\InteractionApi.cs" />
+    <Compile Include="Sdk\VotingOptionApi.cs" />
+    <Compile Include="Sdk\VotingApi.cs" />
     <Compile Include="Sdk\VotingApiGen.cs">
       <DependentUpon>Sdk.tt</DependentUpon>
     </Compile>
