--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -199,8 +199,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\ActivityAPIController.cs" />
+    <Compile Include="API\HomeController.cs" />
+    <Compile Include="API\InteractionController.cs" />
     <Compile Include="API\QAAPIController.cs" />
     <Compile Include="API\SessionController.cs" />
+    <Compile Include="API\SpeakerController.cs" />
+    <Compile Include="API\SponsorController.cs" />
     <Compile Include="API\TimelineAPIController.cs" />
     <Compile Include="API\VotingAPIController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -6965,7 +6969,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CustomCss\admin.css" />
+    <Content Include="Content\CustomCss\QA.css" />
     <Content Include="Content\CustomCss\sponsor.css" />
+    <Content Include="Content\CustomCss\style.default.css" />
     <Content Include="Content\CustomCss\voting.css" />
     <Content Include="Content\DataTables\DataTables-1.10.18\css\dataTables.bootstrap.css" />
     <Content Include="Content\DataTables\DataTables-1.10.18\css\dataTables.bootstrap.min.css" />
@@ -7000,8 +7006,13 @@
     <Content Include="Content\DataTables\datatables.js" />
     <Content Include="Content\DataTables\datatables.min.css" />
     <Content Include="Content\DataTables\datatables.min.js" />
+    <Content Include="Content\HomeJs\Home.js" />
     <Content Include="Content\img\background-wifi-2.png" />
     <Content Include="Content\img\download.png" />
+    <Content Include="Content\Interaction\Interaction.js" />
+    <Content Include="Content\QAJs\QA.js" />
+    <Content Include="Content\SpeakerJs\Speaker.js" />
+    <Content Include="Content\SponsorJs\Sponsor.js" />
     <Content Include="Content\sweetalert-master\.gitignore" />
     <Content Include="Content\sweetalert-master\assets\logotype.png" />
     <Content Include="Content\sweetalert-master\assets\swal.gif" />
@@ -8563,6 +8574,7 @@
     <Content Include="Views\Interaction\Index.cshtml" />
     <Content Include="Views\Timeline\Index.cshtml" />
     <Content Include="Views\Voting\Index.cshtml" />
+    <Content Include="Views\QA\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
