--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\QAController.cs" />
     <Compile Include="Controllers\QuestionController.cs" />
+    <Compile Include="Controllers\ScheduleController.cs" />
     <Compile Include="Controllers\SpeakerController.cs" />
     <Compile Include="Controllers\SponsorController.cs" />
     <Compile Include="Controllers\TimelineController.cs" />
@@ -404,6 +405,7 @@
     <Content Include="Content\CustomCss\home.css" />
     <Content Include="Content\CustomCss\main.css" />
     <Content Include="Content\CustomCss\QA.css" />
+    <Content Include="Content\CustomCss\schedule.css" />
     <Content Include="Content\CustomCss\speaker.css" />
     <Content Include="Content\CustomCss\sponsor.css" />
     <Content Include="Content\CustomCss\timeline.css" />
@@ -850,6 +852,7 @@
     <Content Include="Views\Question\Index.cshtml" />
     <Content Include="Views\Timeline\Index.cshtml" />
     <Content Include="Views\Voting\Index.cshtml" />
+    <Content Include="Views\Schedule\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
