+ Xóa nút reply của comment ở phần QA (client) + Thêm div loader lúc nhập code ở màn hình client + Sửa lại append câu hỏi mới nhất lên đầu trang ở phần QA (client)

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
@@ -450,6 +450,7 @@
     <Content Include="Content\CustomCss\timeline.css" />
     <Content Include="Content\CustomCss\voting.css" />
     <Content Include="Content\img\new_statesman_events.jpg" />
+    <Content Include="Content\img\Pi5sTPQ.jpg" />
     <Content Include="Content\ProgressBar\bootstrap-progressbar.js" />
     <Content Include="Content\ProgressBar\bootstrap-progressbar.min.js" />
     <Content Include="Content\ProgressBar\css\bootstrap-progressbar-2.0.0.css" />
