--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -61,6 +61,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="SkyWeb.DatVM.Data, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SkyWeb.DatVM.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -237,7 +238,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\ActivityViewModel.cs" />
+    <Compile Include="ViewModel\CommentsViewModel.cs" />
     <Compile Include="ViewModel\QAViewModel.cs" />
+    <Compile Include="ViewModel\QuestionViewModel.cs" />
     <Compile Include="ViewModel\SessionViewModel.cs" />
     <Compile Include="ViewModel\CollectionItemViewModel.cs" />
     <Compile Include="ViewModel\TimelineViewModel.cs" />
